@@ -120,11 +120,57 @@ Template: partman-partitioning/set_name
 Type: string
 _Description: Partition name:
 
+Template: partman-partitioning/unknown_label
+Type: boolean
+Default: true
+_Description: Continue with partitioning?
+ This partitioner doesn't have information about the default type of
+ the partition tables on your architecture.  Please send an e-mail
+ message to debian-boot@lists.debian.org with information.
+ .
+ Please note that if the type of the partition table is unsupported by
+ libparted, then this partitioner will not work properly.
+
+Template: partman-partitioning/unsupported_label
+Type: boolean
+Default: false
+_Description: Continue with partitioning?
+ This partitioner is based on the library libparted which doesn't have
+ support for the partition tables used on your architecture.  It is
+ strongly recommended that you exit this partitioner.
+ .
+ If you can, please help to add support for your partition table type
+ to libparted.
+
 Template: partman-partitioning/choose_label
 Type: select
 Choices: ${CHOICES}
 _Description: Partition table type:
  Select the type of partition table to use.
+
+Template: partman-partitioning/confirm_new_label
+Type: boolean
+Default: false
+_Description: Create new empty partition table on this device?
+ You have selected an entire device to partition. If you proceed with
+ creating a new partition table on the device, then all current partitions
+ will be removed.
+ .
+ Note that you will be able to undo this operation later if you wish.
+
+Template: partman-partitioning/confirm_write_new_label
+Type: boolean
+Default: false
+_Description: Write a new empty partition table?
+ Because of limitations in the current implementation of the Sun
+ partition tables in libparted, the newly created partition table has
+ to be written to the disk immediately.
+ .
+ You will NOT be able to undo this operation later and all existing
+ data on the disk will be irreversibly removed.
+ .
+ Confirm whether you actually want to create a new partition table and
+ write it to disk.
 
 Template: partman-partitioning/bootable_logical
 Type: boolean
