@@ -35,6 +35,7 @@ install: build
 	debian/install-rc storage_device
 	debian/install-rc active_partition
 	debian/install-rc free_space
+	debian/install-rc init.d
 	dh_install lib lib/partman
 
 binary-arch: build install
