@@ -2,8 +2,15 @@ partman-partitioning (54) UNRELEASED; urgency=low
 
   * Moved definitions.sh to ./lib/base.sh. Requires partman-base (>= 114).
   * Move resize.sh to ./lib/resize.sh.
+  * Reorganization of partition label related code:
+    - add new function library ./lib/new-label which includes the function
+      default_disk_label previously in definitions.sh, and a new function
+      create_new_label factored out from storage_device/label/do_option
+    - add init.d/unsupported previously in partman-base
+    - add partman/*_label templates previously in partman-base
+    Part of this change was originally suggested by Jérémy Bobbio.
 
- -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 14:49:57 +0100
+ -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 18:22:23 +0100
 
 partman-partitioning (53) unstable; urgency=low
 
